tests/rosetta/transpiler/erl/anagrams-deranged-anagrams.error
exit status 127
/workspace/mochi/tests/rosetta/transpiler/erl/anagrams-deranged-anagrams.erl:139:29: Warning: the result of calling length/1 is ignored (suppress the warning by assigning the expression to the _ variable)
%  139|         true -> BestLen_2 = length(W),
%     |                             ^

/workspace/mochi/tests/rosetta/transpiler/erl/anagrams-deranged-anagrams.erl:158:16: Warning: variable 'M_5' exported from 'case' (line 127, column 13)
%  158| {BestLen_3, K, M_5, W, W1_3, W2_3, Words} = Fun_7(maps:keys(maps:get(K, M_5, nil)), BestLen, K, M_5, W, W1, W2, Words),
%     |                ^

escript: exception error: bad map: ["constitutionalism"]
  in function  maps:keys/1
     called as maps:keys(["constitutionalism"])
     *** argument 1: not a map
  in call from main:'-main/0-Fun_6_loop/6-0-'/6 (/workspace/mochi/tests/rosetta/transpiler/erl/anagrams-deranged-anagrams.erl, line 158)
  in call from main:main/0 (/workspace/mochi/tests/rosetta/transpiler/erl/anagrams-deranged-anagrams.erl, line 168)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/anagrams-deranged-anagrams.erl, line 176)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
